# entirecontext

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  LESSONS.md  LICENSE  README.md  ROADMAP.md  TEST_COVERAGE_ANALYSIS.md  agents.toml  decisions-export.json  manifest.json  pyproject.toml
.devcontainer/: Dockerfile  init-firewall.sh
.entirecontext/db/: local.db
.github/scripts/: close_release_issues.py
.github/tidy-pilot/: assess_pr.py
.github/workflows/: ci.yml  claude-code-review.yml  commit-lint.yml  distill-lessons.yml  release.yml  tidy-pilot.yml
.omc/: RELEASE_RULE.md
.release-loop/: .gitignore  progress.md
.release-loop/archive/: 2026-07-20-v0.15.0-self-archaeology-blame-progress.md
.release-loop/evidence/: review-round-1.md
.release-loop/reports/: task-1-report.md  task-4-report.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
checkpoints/: 0135e250-47b0-44ee-a2ab-0292ae11265f.json  045c844e-bad7-47b4-b892-ddba8a370a3a.json  05c23a7e-d4a9-43fd-af32-7817b1f7993e.json  05d23cc6-dcfc-49cf-8f3b-7f3bfa125c5d.json  0626beb6-ef22-453e-9298-6790d6f6b16b.json  072c387d-5cc7-4519-a67a-4ddf3be9da42.json  08309ba3-8a9e-4316-8388-afe36b294d0e.json  08861f59-d6ae-442f-b268-cee22446e5d4.json  0ab16a8f-07c5-4ef4-be05-b81064f8a8f8.json  0ba4a4fa-db7a-414d-a9fd-91756d0a0b9b.json  0c284601-c808-4505-80e0-26d0e16efba1.json  0c3a0a9d-f69a-4ae9-a876-7bb7cbfc7c6c.json  0c9f7491-89f7-498e-84f7-1c7a27e553b3.json  0ce3a42f-6bfd-450e-b8c4-fcf2f3cf3fa3.json  0d2d5d8a-7dd9-4fb2-b92a-980ad6285f76.json  0e397be6-7bac-4d3a-b364-e6904225932a.json  0e57495e-4507-4998-8439-17ae71611784.json  0e5e6b0a-94a5-438a-ae84-8d5e4507b799.json  0f49beba-b2c3-4193-8e13-c4f1bc02e998.json  108a45c3-ab3a-46d0-a044-8dbefd2bc30c.json  11670f37-28cd-424f-a2c1-b198b2caae99.json  12c784df-36c8-489c-a30b-aacc9508e58a.json  1355c717-ba53-4465-b858-b8825f9ff9ad.json  1462a8fa-816d-4dd8-93c9-01b3a4bcc3bd.json  149d7587-3147-430c-a0af-be85393bae56.json  15c6b31e-f63a-4d7f-95d6-dea02e99cdf3.json  1713f107-3b7a-4b8d-94db-36fa3dae63e6.json  17be676d-8f42-45f3-b67f-3f810426dd77.json  180e2e93-a8e2-42e1-8d98-3d7539f5b3c4.json  18c2ff27-89cb-4b26-9037-44bf7ec02fb4.json  1a148fab-27ef-410f-82a2-e5dfce9b06b2.json  1b4c2926-bbcb-4302-a9df-69feda739a87.json  1befdd86-a7bf-4d44-b3e6-265a6663cb2c.json  1c0c0144-7ddc-4092-befb-89d9684f8aee.json  1d4ee854-21b3-401c-bac9-17e42ea19149.json  1e0bc28a-0f87-40cf-adf3-4719b893012a.json  1eee05d8-e7c8-4789-b179-24502a74b2a8.json  1f99cf77-a7fc-4b51-8c2b-02642ae40067.json  1ffe95fc-5dca-4f12-80ee-c5bb0cd79167.json  20537e51-c187-4792-951e-5aa6b1d0c503.json  (+254 more)
docs/: RELEASE.md  ROADMAP.md  decisions_outcomes.md  documentation_in_prs_proposal.md  entirecontext-project-manual.md  spec-ec-sync-no-filter.md  spec.md  tiered_review_policy_proposal.md
docs/adr/: 0001-adr-process.md  0002-mypy-strict-gradual.md  0003-sessions-ended-non-monotonic.md  0004-track-archaeology-pr-enrichment.md  README.md
docs/brainstorms/: agent-learning-report.md  alive-session-memory.md  decision-conflict-flagging.md  ec-blame-decision-annotated.md  hypothesis-validation-framework.md  proactive-decision-injection.md  retroactive-git-archaeology.md  temporal-query-language.md  v0-6-0-roadmap-plan.md
docs/ideation/: 2026-04-27-product-roadmap-ideation.md
docs/perf/: v0-7-0-pdi-baseline.md
docs/plans/: 2026-07-21-001-fix-blame-sha-lookup-complexity-plan.md  review-fixes-current-worktree.md
docs/research/: agent-memory-landscape.md  github-release-assets-automation.md  index.md  redesign-direction-2026-06-21.md  v0-7-0-hook-contract-spike.md
docs/retros/: 2026-07-12-v0.13.1-archaeology-hardening-retro.md  2026-07-12-v0.14.0-archaeology-carry-forward-retro.md  2026-07-13-tql-temporal-query-language-retro.md  2026-07-20-v0.15.0-self-archaeology-blame-retro.md
docs/specs/: 2026-07-19-self-archaeology-blame-design.md  2026-07-21-blame-sha-lookup-complexity-design.md
docs/templates/: entirecontext-maintainer-decision-reuse-template.md  entirecontext-proactive-guidance.md  entirecontext-user-decision-reuse-template.md
scripts/: generate_noisy_candidate_fixtures.py  spike_probe.py
scripts/experiments/: README.md  analyze_blocks.py  compute_audit_precision.py  flip_block.py  sample_outcome_audit.py
sessions/01150b56-45f8-41ca-954c-fe998e299c76/: meta.json  transcript.jsonl
sessions/019cad4f-a848-72b3-96a9-02325c7b7127/: meta.json  transcript.jsonl
sessions/019cb083-e27e-7eb1-87c3-703f958cebe3/: meta.json  transcript.jsonl
sessions/019cb8d9-9e35-78a1-91b4-6cfd3007d14d/: meta.json  transcript.jsonl
sessions/019cbd9b-37b3-7d91-86eb-2a75e35d39d3/: meta.json  transcript.jsonl
sessions/019cbe23-5c53-71a2-8cb2-444a13bf6e9d/: meta.json  transcript.jsonl
sessions/019cbe33-e52b-7ee1-96cc-dfb7e312fca3/: meta.json  transcript.jsonl
sessions/019cbe3c-6b61-74f3-9e98-687acb7fdb19/: meta.json  transcript.jsonl
sessions/019cc5f4-3cbb-7d60-95a5-6ec1852244e3/: meta.json  transcript.jsonl
sessions/019cc5f8-cafd-7010-9204-268fed0ead88/: meta.json  transcript.jsonl
tests/: conftest.py  conftest_hypothesis.py  test_aar.py  test_activation.py  test_agent_graph.py  test_archaeology.py  test_archaeology_cli.py  test_archaeology_integration.py  test_archaeology_streaming.py  test_assessment_relationships.py  test_ast_index.py  test_async_worker.py  test_attribution.py  test_auto_apply.py  test_auto_apply_backfill.py  test_auto_assess.py  test_auto_sync.py  test_blame_cmds.py  test_blame_decisions.py  test_checkpoint.py  test_checkpoint_cmds.py  test_checkpoint_create.py  test_cli.py  test_codex_ingest.py  test_codex_session_autoclose.py  test_compact.py  test_config.py  test_confirm_commit_link.py  test_consolidation.py  test_content_filter.py  test_context.py  test_contract_sync.py  test_core.py  test_cross_repo.py  test_cross_repo_expanded.py  test_cross_repo_futures.py  test_dashboard.py  test_db_schema.py  test_decision_alternatives.py  test_decision_candidates_batch.py  (+86 more)
(+1463 files in other folders)
