[project]
name = "entirecontext"
version = "0.6.0"
description = "Time-travel searchable agent memory anchored to your codebase"
readme = "README.md"
authors = [
    { name = "Jaehoon You", email = "teslamint@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pyjwt>=2.12.0",
    "pygments>=2.20.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
ec = "entirecontext.cli:app"

[project.urls]
Homepage = "https://github.com/teslamint/entirecontext"
Repository = "https://github.com/teslamint/entirecontext"
Issues = "https://github.com/teslamint/entirecontext/issues"
Changelog = "https://github.com/teslamint/entirecontext/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.10.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = ["LICENSE", "CHANGELOG.md"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
entirecontext = { workspace = true }

[dependency-groups]
dev = [
    "entirecontext",
]
